[gd_scene load_steps=6 format=2]

[ext_resource path="res://ToolButtons/ColorButton.png" type="Texture" id=1]
[ext_resource path="res://LayerButton.gd" type="Script" id=2]
[ext_resource path="res://Canvas/Layer.tscn" type="PackedScene" id=3]
[ext_resource path="res://white_rect_10x10.png" type="Texture" id=4]
[ext_resource path="res://white_rect_1x1.png" type="Texture" id=7]

[node name="LayerButton" type="TextureRect"]
margin_right = 25.0
margin_bottom = 25.0
rect_min_size = Vector2( 25, 25 )
texture = ExtResource( 1 )
expand = true
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Layer" parent="." instance=ExtResource( 3 )]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 0.0
margin_bottom = 0.0
texture = ExtResource( 4 )
expand = true
minimap_layer = true

[node name="CurrentLayerSign" type="TextureRect" parent="."]
visible = false
modulate = Color( 1, 0, 0, 1 )
anchor_right = 1.0
margin_bottom = 6.0
texture = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[connection signal="gui_input" from="." to="." method="_on_LayerButton_gui_input"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
